IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
8/23/12: IMOD_4-6-8
8/22/12: IMOD_4-5-6
8/22/12: In eTomo - Final Aligned Stack, fixed the defocus value in the
_simple.defocus file to be in nm instead of microns (In 4.5).(Bug# 1604)

8/22/12: In Beadtrack, use a sobel-based position on second pass only if it is
closer to the expected position; try to make running 4 rounds behave more like
rerunning with fiducial model as seed.

8/22/12: In Tiltalign and Beadtrack, restored iterative method of initializing
X/Y/Z positions for medium to large amounts of data; direct solution was too
slow.

8/21/12: In eTomo - Fine Alignment, added Robust Fitting to the Beadtrack
interface.(Bug# 1628)

8/21/12: In eTomo, fixed a confusing message.(Bug# 1633)

8/21/12: In eTomo - Generation Tomogram, fixed a bug where the tomogram height
in Y was being ignored if the Y shift was not filled in.(Bug# 1626)

8/20/12: In eTomo - Fiducial Modeling, added Sobel filter parameters to the
BeadTracking panel.(Bug# 1627)

8/20/12: Fixed Xfmodel model scaling when applying distortion field (In 4.5).

8/20/12: In eTomo remembering the state of the trial tilt panel.(Bug# 1625)

8/20/12: In eTomo handled chunk error messages with multiple error tags
(In 4.5).(Bug# 1629)

8/19/12: Added a small CUDA library to Mac package that was needed on our Mac
mini (In 4.5).

8/20/12: Made sure that pop-up messages for the PEET and Serial Sections start
up dialogs will pop-up over the correct dialog.(Bug# 1624)

8/19/12: Added a small CUDA library to Mac package that was needed on our Mac
mini (In 4.5).

8/17/12: Added the Align Serial Sections interface.(Bug# 1611)

8/14/12: Fixed the empty project log error (In 4.5).(Bug# 1616)

8/2/12: Beadtrack: improved criteria for when a bead is too weak so that weaker
beads are allowed when the average one is getting weaker and to try to prevent
beads from tracking on wild positions.  Improved the position prediction when