@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+8/27/12: In eTomo - Join - Align, fixed a problem with bring up Midas where
+the chunks parameters was not passed.(Bug# 1638)
+
 8/23/12: IMOD_4-6-8
 8/22/12: IMOD_4-5-6
 8/22/12: In eTomo - Final Aligned Stack, fixed the defocus value in the
